syntax = "proto2";

option optimize_for = LITE_RUNTIME;

option java_package = "com.x.protobuf";
option java_outer_classname = "Bug7U";

package sync_pb;

message OldMessage {
  
  optional group OldTest = 1 {
  	required string test = 1;
  }
  
  optional string value = 2;
  
}

message NewMessage {
  
  optional group NewTest = 1 {
  	required string test = 1;
  	required string value = 2;
  }
  
  optional string value = 2;
}
